# soop-starter

./: .env.example  .gitignore  LICENSE  README.md  START_HERE.bat  docker-compose.yml
.devcontainer/: devcontainer.json
backend/: Dockerfile  pyproject.toml
backend/src/agent/: __init__.py  function_schemas.json  orchestrator.py  system_prompt.md
backend/src/api/: main.py
backend/src/core/: __init__.py  cache.py  config.py  db.py
backend/src/modules/: __init__.py
backend/src/modules/m01_profiling/: __init__.py  agent.py  extraction_prompt.md
backend/src/modules/m02_filter/: __init__.py  filter.py
backend/src/modules/m03_products/training/: train_m03_real.py
backend/src/modules/m03_suitability/: __init__.py  recommender.py
backend/src/modules/m04_similarity/: __init__.py  similarity.py
backend/src/modules/m05_income/: __init__.py  simulator.py
backend/src/modules/m06_subsidy/: __init__.py  matcher.py  subsidy_rules.yaml
backend/src/modules/m07_shimter/: __init__.py  assessor.py
backend/src/modules/m08_forkg/: __init__.py  rag_agent.py
backend/src/modules/m09_mentor/: __init__.py  matcher.py
backend/src/modules/m10_disaster/: __init__.py  alert.py
backend/src/modules/m11_lifestyle/: __init__.py  scorer.py
backend/src/schemas/: __init__.py  disaster.py  forest_product.py  income.py  kg.py  lot.py  mentor.py  subsidy.py  user_profile.py  village.py
backend/tests/: test_ontology_schema.py  test_personas_e2e.py  test_smoke.py  test_subsidy_rules.py
dags/: dag1_static_shp.py  dag2_statistics.py  dag3_realtime.py  dag4_legal.py  dag5_earth_engine.py  dag6_model_retrain.py
docs/: 00-architecture.md  01-api-application-guide.md  02-data-inventory.md  03-modules.md  04-rag-and-forkg.md  05-personas.md  06-deployment.md  ARCHITECTURE.md  GITHUB_SETUP.md  METHODOLOGY.md  REFERENCES.md  RESULTS.md
frontend/: Dockerfile  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
ml/: m03_lgbm_quick_train.py  (+6 more)
(+43 files in other folders)
