[project]
name = "soop-starter-backend"
version = "0.1.0"
description = "Soop Starter — 한국 산촌 청년 임업인 진입 의사결정 지원 시스템 (Backend)"
authors = [{name = "Heedo", email = "zxsa0716@kookmin.ac.kr"}]
requires-python = ">=3.11,<3.13"
readme = "../README.md"
license = {text = "MIT"}

dependencies = [
  # --- LLM ---
  "anthropic==0.34.0",

  # --- Web framework ---
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "websockets==12.0",
  "httpx==0.27.0",

  # --- Pydantic / Config ---
  "pydantic==2.7.4",
  "pydantic-settings==2.3.4",
  "PyYAML==6.0.1",

  # --- DB ---
  "sqlalchemy[asyncio]==2.0.30",
  "asyncpg==0.29.0",
  "psycopg2-binary==2.9.9",
  "duckdb==1.0.0",
  "redis==5.0.4",

  # --- KG / RAG ---
  "chromadb-client==0.5.3",
  "sentence-transformers==2.7.0",
  "rank-bm25==0.2.2",
  "networkx==3.3",
  "pypdf==4.2.0",

  # --- ML ---
  "lightgbm==4.3.0",
  "scikit-learn==1.5.0",
  "shap==0.45.1",
  "prophet==1.1.5",
  "pandas==2.2.2",
  "numpy==1.26.4",
  "pyarrow==16.1.0",
  "joblib==1.4.2",

  # --- Geo ---
  "geopandas==0.14.4",
  "shapely==2.0.3",

  # --- Earth Engine ---
  "earthengine-api==0.1.408",

  # --- Storage ---
  "minio==7.2.7",

  # --- Crawling ---
  "beautifulsoup4==4.12.3",
  "lxml==5.2.2",

  # --- Observability ---
  "sentry-sdk[fastapi]==2.5.1",
  "structlog==24.2.0",
]

[project.optional-dependencies]
gat = [
  "torch==2.3.1",
  "torch-geometric==2.5.3",
]
dev = [
  "pytest==8.2.2",
  "pytest-asyncio==0.23.7",
  "pytest-cov==5.0.0",
  "ruff==0.4.10",
  "mypy==1.10.0",
  "ipykernel==6.29.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"
[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
